# cypchemspace

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
docs/: final_report.md  module_chem_requirements.html  module_data_requirements.html  module_docs_report_requirements.html  module_embedding_enrichment_requirements.html  module_package_cli_requirements.html  proposal.md  report.md  requirements.html  slides_outline.md  tutorial.md  video_recording_guide.md
examples/: demo_cypchemspace.ipynb
examples/example_data/: clean_rescued_substrates_2548.csv  cyp_substrates_demo.csv
results/demo_clean_2548_128bit_pca_perm19/: README.md  embedding.csv  summary.csv
results/demo_run/: embedding.csv  summary.csv
results/full_clean_reference/: README.md  combined_perm_null_perm5000.npz  combined_stats_results_perm5000.meta.json  combined_stats_results_perm5000.tsv  umap_mydb_vs_background_clean_rescued_plot_data.csv
results/notebook_demo/: embedding.csv  summary.csv
src/cypchemspace/: __init__.py  _compat.py  chem.py  cli.py  embedding.py  enrichment.py  io.py  visualize.py
tests/: test_chem.py  test_cli.py  test_enrichment.py  test_io.py  test_visualize.py
tools/python_startup_patch/: sitecustomize.py
